--- a/Linear_regression_model_for_house_price_prediction.ipynb
+++ b/Linear_regression_model_for_house_price_prediction.ipynb
@@ -33,8 +33,8 @@
     {
       "cell_type": "code",
       "source": [
-        "train_data = pd.read_csv('/content/drive/MyDrive/Task 1/train.csv')\n",
-        "test_data = pd.read_csv('/content/drive/MyDrive/Task 1/test.csv')"
+        "train_data = pd.read_csv('train.csv')\n",
+        "test_data = pd.read_csv('test.csv')"
       ],
       "metadata": {
         "id": "mPyLapZIbTTc"
